--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,53 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>at.sti2.ngsee</groupId>
-	<artifactId>registration-project</artifactId>
+	<artifactId>sesa-project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>../registration-api</module>
-		<module>../registration-core</module>
-		<module>../registration-webservice</module>
+		<module>invoker</module>
+		<module>registration</module>
+		<module>util</module>
 	</modules>
 
-
-	<name>registration-project</name>
-	<url>http://maven.apache.org</url>
+	<name>sesa-project</name>
+	<url>http://see.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<cxf.version>2.3.3</cxf.version>
 	</properties>
+
+	<issueManagement>
+		<system>Sourceforge</system>
+		<url>http://see.sti2.at</url>
+	</issueManagement>
+
+	<organization>
+		<name>Semantic Technology Institute Innsbruck</name>
+		<url>http://see.sti2.at</url>
+	</organization>
+
+	<developers>
+		<developer>
+			<name>Michael Rogger</name>
+		</developer>
+		<developer>
+			<name>Alex Oberhauser</name>
+		</developer>
+		<developer>
+			<name>Corneliu Stanciu</name>
+		</developer>
+	</developers>
+
+	<!-- DISTRIBUTION MANAGEMENT -->
+	<distributionManagement>
+		<snapshotRepository>
+			<id>sti-snapshots</id>
+			<name>STI snapshot distribution</name>
+			<url>http://maven.sti2.at/archiva/repository/snapshots</url>
+		</snapshotRepository>
+	</distributionManagement>
 
 	<!-- REPOSITORIES -->
 	<repositories>
@@ -54,16 +83,13 @@
 			<name>sun-java</name>
 			<url>http://download.java.net/maven/2</url>
 		</repository>
+		<!-- used for saxon9 -->
+		<repository>
+			<id>phloc</id>
+			<name>phloc</name>
+			<url>http://repo.phloc.com/maven2/</url>
+		</repository>
 	</repositories>
-
-	<!-- DISTRIBUTION MANAGEMENT -->
-	<distributionManagement>
-		<snapshotRepository>
-			<id>sti-snapshots</id>
-			<name>STI snapshot distribution</name>
-			<url>http://maven.sti2.at/archiva/repository/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
 
 	<!-- BUILD PROCESS -->
 	<build>
@@ -93,7 +119,7 @@
 					<configuration>
 						<rules>
 							<requireMavenVersion>
-								<version>[2.0.6,)</version>
+								<version>[3.0.0,)</version>
 							</requireMavenVersion>
 							<requireJavaVersion>
 								<version>[1.6,)</version>
@@ -122,10 +148,23 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.0.2</version>
+					<version>2.3.2</version>
 					<configuration>
 						<source>1.6</source>
 						<target>1.6</target>
+						<profile>
+							<activation>
+								<jdk>1.6</jdk>
+							</activation>
+							<dependencies>
+								<dependency>
+									<groupId>javax.activation</groupId>
+									<artifactId>activation</artifactId>
+									<version>1.1</version>
+									<scope>provided</scope>
+								</dependency>
+							</dependencies>
+						</profile>
 					</configuration>
 				</plugin>
 
@@ -138,7 +177,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.6</version>
+					<version>2.7</version>
 					<configuration>
 						<minmemory>128m</minmemory>
 						<maxmemory>512</maxmemory>
@@ -148,11 +187,13 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-eclipse-plugin</artifactId>
-					<version>2.5</version>
+					<version>2.8</version>
 					<configuration>
 						<useProjectReferences>true</useProjectReferences>
+						<downloadJavadocs>true</downloadJavadocs>
 					</configuration>
 				</plugin>
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
@@ -161,73 +202,5 @@
 			</plugins>
 		</pluginManagement>
 	</build>
-
-	<!-- DEPENDENCY MANAGEMENT -->
-	<dependencyManagement>
-		<dependencies>
-
-			<!-- projects -->
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>registration-api</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>registration-core</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>${project.groupId}</groupId>
-				<artifactId>registration-webservice</artifactId>
-				<version>${project.version}</version>
-			</dependency>
-
-			<!-- libraries -->
-			<dependency>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-rt-frontend-jaxws</artifactId>
-				<version>${cxf.version}</version>
-			</dependency>
-			<dependency>
-				<groupId>org.apache.cxf</groupId>
-				<artifactId>cxf-rt-transports-http</artifactId>
-				<version>${cxf.version}</version>
-			</dependency>
-
-			<!-- tools -->
-			<dependency>
-				<groupId>log4j</groupId>
-				<artifactId>log4j</artifactId>
-				<version>1.2.16</version>
-				<!-- Because the JDK1.6 already includes the Java Activation API, otherwise 
-					this could generate ClassLoading Linkage errors in Servlets -->
-				<exclusions>
-					<exclusion>
-						<groupId>javax.activation</groupId>
-						<artifactId>activation</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.5</version>
-				<scope>test</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
-	<!-- DEPENDENCIES -->
-	<!-- these dependencies are included in every child project per default -->
-	<dependencies>
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
-	</dependencies>
 
 </project>
