--- a/registration/pom.xml
+++ b/registration/pom.xml
@@ -49,6 +49,11 @@
 				<artifactId>registration-webservice</artifactId>
 				<version>${project.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>at.sti2.util</groupId>
+				<artifactId>util-triplestore-client</artifactId>
+				<version>0.1-SNAPSHOT</version>
+			</dependency>
 
 			<!-- libraries -->
 			<dependency>
