--- a/registration/registration-core/pom.xml
+++ b/registration/registration-core/pom.xml
@@ -36,7 +36,12 @@
 			<groupId>org.ow2.easywsdl</groupId>
 			<artifactId>easywsdl-ext-sawsdl</artifactId>
 			<version>2.1</version>
-		</dependency>
-	</dependencies>
+                </dependency>
+                <dependency>
+                        <groupId>at.sti2.util</groupId>
+                        <artifactId>util-triplestore-client</artifactId>
+                        <version>0.1-SNAPSHOT</version>
+                </dependency>
+        </dependencies>
 </project>
 
