Adding monitoring as module to the root project. Fixing invoker-client.

--- a/monitoring/monitoring-channellistener-example/pom.xml
+++ b/monitoring/monitoring-channellistener-example/pom.xml
@@ -98,7 +98,7 @@
 							<id>process-classes</id>
 							<phase>process-classes</phase>
 							<configuration>
-								<className>at.sti2.monitoring.webservice.EventStreamListenerWebService</className>
+								<className>at.sti2.ngsee.monitoring.webservice.EventStreamListenerWebService</className>
 								<!-- <genServer>true</genServer> -->
 								<genWsdl>true</genWsdl>
 								<verbose>true</verbose>
