--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<modules>
 		<module>invoker</module>
 		<module>registration</module>
+		<module>monitoring</module>
 		<module>util</module>
 	</modules>
 
