--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
 		</snapshotRepository>
 	</distributionManagement>
 
+
+	<scm>
+		<connection>scm:git:ssh://sesa.sti2.at:/var/scm/see/sesa.git</connection>
+		<url>scm:git:ssh://sesa.sti2.at:/var/scm/see/sesa.git</url>
+		<!-- <developerConnection>scm:git:git@github.com:tobrien/git-demo.git</developerConnection> -->
+	</scm>
+
 	<!-- REPOSITORIES -->
 	<repositories>
 		<repository>
@@ -172,7 +179,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-war-plugin</artifactId>
-					<version>2.1-beta-1</version>
+					<version>2.1</version>
 				</plugin>
 
 				<plugin>
@@ -199,6 +206,12 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-deploy-plugin</artifactId>
 					<version>2.4</version>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.1</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
