--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -4,10 +4,17 @@
 
 	<groupId>at.sti2.ngsee.monitoring</groupId>
 	<artifactId>monitoring-project</artifactId>
-	<version>0.1-SNAPSHOT</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>Web Service Monitoring Framework</name>
 	<url>http://www.sti-innsbruck.at</url>
+
+	<parent>
+		<groupId>at.sti2.ngsee</groupId>
+		<artifactId>sesa-project</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
 
 	<modules>
 		<module>monitoring-api</module>
@@ -26,146 +33,8 @@
 		<url>http://www.sti-innsbruck.at</url>
 	</organization>
 
-	<repositories>
-		<repository>
-			<id>maven</id>
-			<name>maven.org</name>
-			<url>http://repo1.maven.org/maven2</url>
-		</repository>
-		<repository>
-			<id>sti-snapshots</id>
-			<name>STI snapshots</name>
-			<url>http://maven.sti2.at/archiva/repository/snapshots</url>
-		</repository>
-		<repository>
-			<id>sti-external</id>
-			<name>Maven STI external repository</name>
-			<url>http://maven.sti2.at/archiva/repository/external</url>
-		</repository>
-		<repository>
-			<id>openrdf-sesame</id>
-			<name>OpenRDF Sesame repository</name>
-			<url>http://repo.aduna-software.org/maven2/releases</url>
-		</repository>
-	</repositories>
-
-
-	<distributionManagement>
-		<snapshotRepository>
-			<id>sti-snapshots</id>
-			<name>STI snapshot distribution</name>
-			<url>http://maven.sti2.at/archiva/repository/snapshots</url>
-		</snapshotRepository>
-	</distributionManagement>
-
 	<build>
-		<!-- All childs inherit this plugins -->
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-enforcer-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-			</plugin>
-		</plugins>
 
-		<!-- PLUGIN MANAGEMENT -->
-		<pluginManagement>
-			<plugins>
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-enforcer-plugin</artifactId>
-					<version>1.0-beta-1</version>
-					<configuration>
-						<rules>
-							<requireMavenVersion>
-								<version>[2.0.6,)</version>
-							</requireMavenVersion>
-							<requireJavaVersion>
-								<version>[1.6,)</version>
-							</requireJavaVersion>
-							<versionRule
-								implementation="org.eclipse.jetty.toolchain.enforcer.rules.VersionRule" />
-						</rules>
-					</configuration>
-					<executions>
-						<execution>
-							<id>enforce-java</id>
-							<goals>
-								<goal>enforce</goal>
-							</goals>
-						</execution>
-					</executions>
-					<dependencies>
-						<dependency>
-							<groupId>org.eclipse.jetty.toolchain</groupId>
-							<artifactId>jetty-enforcer-rules</artifactId>
-							<version>1.0</version>
-						</dependency>
-					</dependencies>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.0.2</version>
-					<configuration>
-						<source>1.6</source>
-						<target>1.6</target>
-						<profile>
-							<activation>
-								<jdk>1.6</jdk>
-							</activation>
-							<dependencies>
-								<dependency>
-									<groupId>javax.activation</groupId>
-									<artifactId>activation</artifactId>
-									<version>1.1</version>
-									<scope>provided</scope>
-								</dependency>
-							</dependencies>
-						</profile>
-					</configuration>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>2.1-beta-1</version>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.6</version>
-					<configuration>
-						<minmemory>128m</minmemory>
-						<maxmemory>512</maxmemory>
-					</configuration>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-eclipse-plugin</artifactId>
-					<version>2.5</version>
-					<configuration>
-						<useProjectReferences>true</useProjectReferences>
-					</configuration>
-				</plugin>
-
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-deploy-plugin</artifactId>
-					<version>2.4</version>
-				</plugin>
-			</plugins>
-		</pluginManagement>
 	</build>
 
 	<dependencyManagement>
@@ -174,6 +43,12 @@
 				<groupId>${project.groupId}</groupId>
 				<artifactId>monitoring-api</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>at.sti2.util</groupId>
+				<artifactId>util-triplestore-client</artifactId>
+				<scope>compile</scope>
+				<version>0.0.1-SNAPSHOT</version>
 			</dependency>
 
 			<!-- libraries -->
