--- a/monitoring/monitoring-core/pom.xml
+++ b/monitoring/monitoring-core/pom.xml
@@ -7,14 +7,14 @@
 
 	<groupId>at.sti2.ngsee.monitoring</groupId>
 	<artifactId>monitoring-core</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Web Service Monitoring Framework - Core</name>
 
 	<parent>
 		<groupId>at.sti2.ngsee.monitoring</groupId>
 		<artifactId>monitoring-project</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
