--- a/util/util-triplestore-client/pom.xml
+++ b/util/util-triplestore-client/pom.xml
@@ -7,14 +7,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>at.sti2.util</groupId>
 	<artifactId>util-triplestore-client</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>util-triplestore-client</name>
 
 	<parent>
 		<groupId>at.sti2.ngsee</groupId>
 		<artifactId>util-project</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	
