--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,13 @@
 							</goals>
 						</execution>
 					</executions>
+					<dependencies>
+						<dependency>
+							<groupId>org.eclipse.jetty.toolchain</groupId>
+							<artifactId>jetty-enforcer-rules</artifactId>
+							<version>1.0</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 
 				<plugin>
@@ -207,10 +214,12 @@
 					<artifactId>maven-release-plugin</artifactId>
 					<version>2.1</version>
 					<configuration>
+						<!-- use local git repo -->
 						<pushChanges>false</pushChanges>
+						<localCheckout>true</localCheckout>
 					</configuration>
 				</plugin>
-				
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-scm-plugin</artifactId>
