--- a/invoker/invoker-dummy-webservice/pom.xml
+++ b/invoker/invoker-dummy-webservice/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>at.sti2.ngsee</groupId>
 	<artifactId>invoker-dummy-webservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<parent>
 		<groupId>at.sti2.ngsee</groupId>
