--- a/monitoring/pom.xml
+++ b/monitoring/pom.xml
@@ -33,7 +33,47 @@
 	</organization>
 
 	<build>
+                <pluginManagement>
+                        <plugins>
+                                <plugin>
+                                        <groupId>org.apache.cxf</groupId>
+                                        <artifactId>cxf-java2ws-plugin</artifactId>
+                                        <version>${cxf.version}</version>
+                                        <dependencies>
+                                                <dependency>
+                                                        <groupId>org.apache.cxf</groupId>
+                                                        <artifactId>cxf-rt-frontend-jaxws</artifactId>
+                                                        <version>${cxf.version}</version>
+                                                </dependency>
+                                                <dependency>
+                                                        <groupId>org.apache.cxf</groupId>
+                                                        <artifactId>cxf-rt-frontend-simple</artifactId>
+                                                        <version>${cxf.version}</version>
+                                                </dependency>
+                                        </dependencies>
+                                        <executions>
+                                                <execution>
+                                                        <id>process-classes</id>
+                                                        <phase>process-classes</phase>
+                                                        <configuration>
+                                                                <genWsdl>false</genWsdl>
+                                                                <verbose>true</verbose>
+                                                        </configuration>
+                                                </execution>
+                                        </executions>
+                                </plugin>
 
+                                <plugin>
+                                        <groupId>org.mortbay.jetty</groupId>
+                                        <artifactId>maven-jetty-plugin</artifactId>
+                                        <version>6.1.10</version>
+                                        <configuration>
+                                                <scanIntervalSeconds>10</scanIntervalSeconds>
+                                        </configuration>
+                                </plugin>
+
+                        </plugins>
+                </pluginManagement>
 	</build>
 
 	<dependencyManagement>
@@ -44,9 +84,13 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>${project.groupId}</groupId>
+				<artifactId>monitoring-core</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>at.sti2.util</groupId>
 				<artifactId>util-triplestore-client</artifactId>
-				<scope>compile</scope>
 				<version>0.0.2-SNAPSHOT</version>
 			</dependency>
 
