Fixing invoker-client

--- a/invoker/invoker-core/src/main/resources/default.properties
+++ b/invoker/invoker-core/src/main/resources/default.properties
@@ -1,5 +1,5 @@
 ######################################
 # Triplestore Access Information
 ######################################
-sesame.endpoint = http://demo.sti2.at:8080/openrdf-sesame
+sesame.endpoint = http://sesa.sti2.at:8080/openrdf-sesame
 sesame.reposid = sesaRepo
