fixed groupId in all maven projects

--- a/monitoring/monitoring-core/pom.xml
+++ b/monitoring/monitoring-core/pom.xml
@@ -25,7 +25,7 @@
 			<artifactId>monitoring-api</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>at.sti2.util</groupId>
+			<groupId>at.sti2.ngsee.util</groupId>
 			<artifactId>util-triplestore-client</artifactId>
 		</dependency>
 		<dependency>
