--- a/registration/pom.xml
+++ b/registration/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.sti2.ngsee</groupId>
+	<groupId>at.sti2.ngsee.registration</groupId>
 	<artifactId>registration-project</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -49,7 +49,7 @@
 				<version>${project.version}</version>
 			</dependency>
 			<dependency>
-				<groupId>at.sti2.util</groupId>
+				<groupId>at.sti2.ngsee.util</groupId>
 				<artifactId>util-triplestore-client</artifactId>
 				<version>0.0.2-SNAPSHOT</version>
 			</dependency>
