--- a/registration/registration-webservice/pom.xml
+++ b/registration/registration-webservice/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.sti2.ngsee</groupId>
+	<groupId>at.sti2.ngsee.registration</groupId>
 	<artifactId>registration-webservice</artifactId>
 	<version>0.0.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<parent>
-		<groupId>at.sti2.ngsee</groupId>
+		<groupId>at.sti2.ngsee.registration</groupId>
 		<artifactId>registration-project</artifactId>
 		<version>0.0.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
@@ -134,12 +134,12 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>at.sti2.ngsee</groupId>
+			<groupId>at.sti2.ngsee.registration</groupId>
 			<artifactId>registration-api</artifactId>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>at.sti2.ngsee</groupId>
+			<groupId>at.sti2.ngsee.registration</groupId>
 			<artifactId>registration-core</artifactId>
 			<scope>compile</scope>
 		</dependency>
