--- a/invoker/invoker-dummy-webservice/pom.xml
+++ b/invoker/invoker-dummy-webservice/pom.xml
@@ -2,15 +2,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>at.sti2.ngsee</groupId>
+	<groupId>at.sti2.ngsee.invoker</groupId>
 	<artifactId>invoker-dummy-webservice</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2-SNAPSHOT</version>
 	<packaging>war</packaging>
 
 	<parent>
-		<groupId>at.sti2.ngsee</groupId>
+		<groupId>at.sti2.ngsee.invoker</groupId>
 		<artifactId>invoker-project</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -41,57 +41,23 @@
 
 		<pluginManagement>
 			<plugins>
+			
 				<plugin><!--use mvn tomcat:deploy or mvn tomcat:undeploy -->
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>tomcat-maven-plugin</artifactId>
-					<version>1.0-beta-1</version>
-					<configuration>
-						<server>myTomcat</server>
-						<path>/${project.build.finalName}</path>
-						<!--url>Place URL if different from http://localhost:8080/manager</url -->
-					</configuration>
 				</plugin>
 
 				<!-- Below plugin provides a separate JAR for the JAX-WS artifacts (i.e., 
 					the Java classes created by running wsdl2java or wsimport), as this JAR will 
 					also be used by the SOAP client. -->
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.2.1</version>
-					<configuration>
-						<descriptors>
-							<descriptor>src/assembly/jaxws-jar.xml</descriptor>
-						</descriptors>
-						<appendAssemblyId>true</appendAssemblyId>
-						<attach>true</attach>
-					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 
 				<plugin>
 					<groupId>org.apache.cxf</groupId>
 					<artifactId>cxf-java2ws-plugin</artifactId>
-					<version>${cxf.version}</version>
-					<dependencies>
-						<dependency>
-							<groupId>org.apache.cxf</groupId>
-							<artifactId>cxf-rt-frontend-jaxws</artifactId>
-							<version>${cxf.version}</version>
-						</dependency>
-						<dependency>
-							<groupId>org.apache.cxf</groupId>
-							<artifactId>cxf-rt-frontend-simple</artifactId>
-							<version>${cxf.version}</version>
-						</dependency>
-					</dependencies>
 					<executions>
 						<execution>
 							<id>process-classes</id>
@@ -113,7 +79,6 @@
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>maven-jetty-plugin</artifactId>
-					<version>6.1.10</version>
 					<configuration>
 						<scanIntervalSeconds>10</scanIntervalSeconds>
 						<connectors>
