--- a/invoker/invoker-webservice/pom.xml
+++ b/invoker/invoker-webservice/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>at.sti2.ngsee.invoker</groupId>
@@ -43,39 +44,18 @@
 
 		<pluginManagement>
 			<plugins>
+			
 				<plugin><!--use mvn tomcat:deploy or mvn tomcat:undeploy -->
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>tomcat-maven-plugin</artifactId>
-					<version>1.0-beta-1</version>
-					<configuration>
-						<server>myTomcat</server>
-						<path>/${project.build.finalName}</path>
-						<!--url>Place URL if different from http://localhost:8080/manager</url -->
-					</configuration>
 				</plugin>
 
 				<!-- Below plugin provides a separate JAR for the JAX-WS artifacts (i.e., 
 					the Java classes created by running wsdl2java or wsimport), as this JAR will 
 					also be used by the SOAP client. -->
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-assembly-plugin</artifactId>
-					<version>2.2-beta-1</version>
-					<configuration>
-						<descriptors>
-							<descriptor>src/assembly/jaxws-jar.xml</descriptor>
-						</descriptors>
-						<appendAssemblyId>true</appendAssemblyId>
-						<attach>true</attach>
-					</configuration>
-					<executions>
-						<execution>
-							<id>make-assembly</id>
-							<phase>package</phase>
-							<goals>
-								<goal>single</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 
 				<plugin>
@@ -94,28 +74,11 @@
 							<version>${cxf.version}</version>
 						</dependency>
 					</dependencies>
-					<executions>
-						<execution>
-							<id>process-classes</id>
-							<phase>process-classes</phase>
-							<configuration>
-								<className>at.sti2.ngsee.invoker.webservice.InvokerWebService</className>
-								<!-- <genServer>true</genServer> -->
-								<genWsdl>true</genWsdl>
-								<verbose>true</verbose>
-								<!-- <argline>-s ${project.build.directory}/generated-sources/</argline> -->
-							</configuration>
-							<goals>
-								<goal>java2ws</goal>
-							</goals>
-						</execution>
-					</executions>
 				</plugin>
 
 				<plugin>
 					<groupId>org.mortbay.jetty</groupId>
 					<artifactId>maven-jetty-plugin</artifactId>
-					<version>6.1.10</version>
 					<configuration>
 						<scanIntervalSeconds>10</scanIntervalSeconds>
 						<connectors>
