Starting with integration tests and finalizing for the first release

--- a/invoker/invoker-client/pom.xml
+++ b/invoker/invoker-client/pom.xml
@@ -21,5 +21,17 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-bundle</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+		</dependency>
 	</dependencies>
 </project>
