Changing the web service URI prefix to http://sesa.sti2.at/services/

--- a/discovery/discovery-api/pom.xml
+++ b/discovery/discovery-api/pom.xml
@@ -14,7 +14,7 @@
 	</parent>
 
 	<name>discovery-api</name>
-	<url>http://see.sti2.at</url>
+	<url>http://sesa.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
