--- a/util/pom.xml
+++ b/util/pom.xml
@@ -18,7 +18,7 @@
 	</modules>
 
 	<name>util-project</name>
-	<url>http://see.sti2.at</url>
+	<url>http://sesa.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -26,12 +26,12 @@
 
 	<issueManagement>
 		<system>Sourceforge</system>
-		<url>http://see.sti2.at</url>
+		<url>http://sesa.sti2.at</url>
 	</issueManagement>
 
 	<organization>
 		<name>Semantic Technology Institute Innsbruck</name>
-		<url>http://see.sti2.at</url>
+		<url>http://sesa.sti2.at</url>
 	</organization>
 
 	<developers>
