--- a/discovery/pom.xml
+++ b/discovery/pom.xml
@@ -21,7 +21,7 @@
 	</modules>
 
 	<name>discovery-project</name>
-	<url>http://see.sti2.at</url>
+	<url>http://sesa.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -32,12 +32,12 @@
 
 	<issueManagement>
 		<system>Sourceforge</system>
-		<url>http://see.sti2.at</url>
+		<url>http://sesa.sti2.at</url>
 	</issueManagement>
 
 	<organization>
 		<name>Semantic Technology Institute Innsbruck</name>
-		<url>http://see.sti2.at</url>
+		<url>http://sesa.sti2.at</url>
 	</organization>
 
 	<developers>
