--- a/invoker/invoker-webservice/pom.xml
+++ b/invoker/invoker-webservice/pom.xml
@@ -15,7 +15,7 @@
 	</parent>
 
 	<name>invoker-webservice</name>
-	<url>http://see.sti2.at</url>
+	<url>http://sesa.sti2.at</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -44,7 +44,6 @@
 
 		<pluginManagement>
 			<plugins>
-			
 				<plugin><!--use mvn tomcat:deploy or mvn tomcat:undeploy -->
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>tomcat-maven-plugin</artifactId>
