--- a/invoker/pom.xml
+++ b/invoker/pom.xml
@@ -109,21 +109,21 @@
                                 <version>${cxf.version}</version>
                         </dependency>
                         <!-- axis -->
-                        <dependency>
-                                <groupId>org.apache.axis2</groupId>
-                                <artifactId>axis2-kernel</artifactId>
-                                <version>${axis.version}</version>
-                        </dependency>
-                        <dependency>
-                                <groupId>org.apache.axis2</groupId>
-                                <artifactId>axis2-transport-local</artifactId>
-                                <version>${axis.version}</version>
-                        </dependency>
-                        <dependency>
-                                <groupId>org.apache.axis2</groupId>
-                                <artifactId>axis2-transport-http</artifactId>
-                                <version>${axis.version}</version>
-                        </dependency>
+<!--                         <dependency> -->
+<!--                                 <groupId>org.apache.axis2</groupId> -->
+<!--                                 <artifactId>axis2-kernel</artifactId> -->
+<!--                                 <version>${axis.version}</version> -->
+<!--                         </dependency> -->
+<!--                         <dependency> -->
+<!--                                 <groupId>org.apache.axis2</groupId> -->
+<!--                                 <artifactId>axis2-transport-local</artifactId> -->
+<!--                                 <version>${axis.version}</version> -->
+<!--                         </dependency> -->
+<!--                         <dependency> -->
+<!--                                 <groupId>org.apache.axis2</groupId> -->
+<!--                                 <artifactId>axis2-transport-http</artifactId> -->
+<!--                                 <version>${axis.version}</version> -->
+<!--                         </dependency> -->
                         <dependency>
                                 <groupId>dom4j</groupId>
                                 <artifactId>dom4j</artifactId>
