--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
 	<name>sesa-project</name>
 	<url>http://sesa.sti2.at</url>
 
+        <licenses>LICENSE.txt</licenses>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
