--- a/registration/registration-core/pom.xml
+++ b/registration/registration-core/pom.xml
@@ -65,6 +65,16 @@
                         <version>1.1</version>
                 </dependency>
                 <dependency>
+						<groupId>net.sf.saxon</groupId>
+						<artifactId>saxon</artifactId>
+						<version>8.7</version>
+				</dependency>
+				<dependency>
+						<groupId>net.sf.saxon</groupId>
+						<artifactId>saxon-dom</artifactId>
+						<version>8.7</version>
+				</dependency>
+                <dependency>
                         <groupId>at.sti2.ngsee.util</groupId>
                         <artifactId>util-triplestore-client</artifactId>
                 </dependency>
