--- a/registration/pom.xml
+++ b/registration/pom.xml
@@ -3,13 +3,13 @@
 
 	<groupId>at.sti2.ngsee.registration</groupId>
 	<artifactId>registration-project</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>pom</packaging>
 	
 	<parent>
 		<groupId>at.sti2.ngsee</groupId>
 		<artifactId>sesa-project</artifactId>
-		<version>0.0.2-SNAPSHOT</version>
+		<version>1.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
@@ -53,7 +53,7 @@
 			<dependency>
 				<groupId>at.sti2.ngsee.util</groupId>
 				<artifactId>util-triplestore-client</artifactId>
-				<version>0.0.2-SNAPSHOT</version>
+				<version>1.0</version>
 			</dependency>
 
 			<!-- libraries -->
