--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>at.sti2.ngsee</groupId>
 	<artifactId>sesa-project</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>1.0</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -139,8 +138,7 @@
 							<requireJavaVersion>
 								<version>[1.6,)</version>
 							</requireJavaVersion>
-							<versionRule
-								implementation="org.eclipse.jetty.toolchain.enforcer.rules.VersionRule" />
+							<versionRule implementation="org.eclipse.jetty.toolchain.enforcer.rules.VersionRule" />
 						</rules>
 					</configuration>
 					<executions>
