--- a/discovery/discovery-core/pom.xml
+++ b/discovery/discovery-core/pom.xml
@@ -3,13 +3,13 @@
 
 	<groupId>at.sti2.ngsee.discovery</groupId>
 	<artifactId>discovery-core</artifactId>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>at.sti2.ngsee.discovery</groupId>
 		<artifactId>discovery-project</artifactId>
-		<version>1.0</version>
+		<version>1.1-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
