[maven-release-plugin] prepare release sesa-project-1.1

--- a/discovery/discovery-webservice/pom.xml
+++ b/discovery/discovery-webservice/pom.xml
@@ -3,13 +3,13 @@
 
 	<groupId>at.sti2.ngsee.discovery</groupId>
 	<artifactId>discovery-webservice</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<packaging>war</packaging>
 
 	<parent>
 		<groupId>at.sti2.ngsee.discovery</groupId>
 		<artifactId>discovery-project</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
