--- a/monitoring/monitoring-webservice/pom.xml
+++ b/monitoring/monitoring-webservice/pom.xml
@@ -3,14 +3,14 @@
 
 	<groupId>at.sti2.ngsee.monitoring</groupId>
 	<artifactId>monitoring-webservice</artifactId>
-	<version>1.1-SNAPSHOT</version>
+	<version>1.1</version>
 	<packaging>war</packaging>
 	<name>Web Service Monitoring Framework - Web Services</name>
 
 	<parent>
 		<groupId>at.sti2.ngsee.monitoring</groupId>
 		<artifactId>monitoring-project</artifactId>
-		<version>1.1-SNAPSHOT</version>
+		<version>1.1</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
