--- a/registration/registration-api/pom.xml
+++ b/registration/registration-api/pom.xml
@@ -3,13 +3,13 @@
 
   	<groupId>at.sti2.ngsee.registration</groupId>
   	<artifactId>registration-api</artifactId>
-  	<version>1.1-SNAPSHOT</version>
+  	<version>1.1</version>
   	<packaging>jar</packaging>
   
     <parent>
         <groupId>at.sti2.ngsee.registration</groupId>
         <artifactId>registration-project</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1</version>
         <relativePath>../pom.xml</relativePath>
   	</parent>
 
